# ponglehub

./: .envrc  .envrc-example  .geppetto.json  .gitignore  Earthfile  Makefile  Mudfile  README.md  Tiltfile  justfile  mudly.yaml  ponglehub.code-workspace  setup.sh  start.sh  stop.sh  user.yaml  workspace.code-workspace
.devcontainer/: Dockerfile  devcontainer.json  startup.sh
.devcontainer/library-scripts/: docker-debian.sh  install-deps.sh
chart-cache/: index-cache.yaml
deployment/: Chart.yaml  lint-values.yaml  values.yaml
deployment/crds/: client.crd.yaml  user-seed.crd.yaml
deployment/templates/: NOTES.txt  ingress.yaml  jobs.yaml  servers.yaml  static.yaml
docker/: go-static.Dockerfile  go-test.Dockerfile  go.Dockerfile  nginx.Dockerfile
helm/: .helmignore  Earthfile  values.yaml
helm/templates/: _cockroachdb.tpl  app.functions.yaml  app.ingress.yaml  app.jobs.yaml  app.servers.yaml  brokers.yaml  cockroachdb.yaml  mock.server.yaml  namespaces.yaml  nats.yaml  redis.yaml  secrets.yaml  test.deployment.yaml  test.job.yaml
helm/tests/: Chart.yaml  lint-values.yaml  values.yaml
infra/: cluster-start.sh  cluster-stop.sh  repos-stop.sh  repos.sh  reset-npm.sh  restore-npm.sh  setup-local.sh  setup-npm.sh  start.sh  stop.sh
infra/chart/: Chart.yaml  lint-values.yaml  values.yaml
infra/cluster/: start.sh  stop.sh
infra/dashboards/: default.json
infra/dev/: cockroach-client.crd.yaml  db-operator.yaml
infra/k3s/: registries.yaml
infra/local-repos/: default.conf  start.sh  stop.sh
infra/manifests/: istio-crd.yaml  istio-operator.yaml
infra/repos/: start.sh  stop.sh
libraries/mudfiles/: cockroachdb.Mudfile
libraries/tilt/: helm.Tiltfile  infra.Tiltfile
migrations/: Earthfile  flyway.Dockerfile
migrations/auth/: V1__users_table.sql  V2__clients_table.sql
services/auth-operator/: .earthignore  .envrc.example  Cargo.toml  Earthfile  Makefile  Mudfile  PROJECT  Tiltfile  docker-compose.yaml  go.mod  go.sum  kubeconfig.yaml  main.go  mudly.yaml  test-user.yaml
services/auth-operator/api/v1alpha1/: authuser_types.go  groupversion_info.go  zz_generated.deepcopy.go
services/auth-operator/config/crd/: kustomization.yaml
services/auth-operator/config/crd/bases/: auth.ponglehub.co.uk_authusers.yaml
services/auth-operator/config/crd/patches/: cainjection_in_authusers.yaml  webhook_in_authusers.yaml
services/auth-operator/config/default/: kustomization.yaml
services/auth-operator/config/manager/: controller_manager_config.yaml
services/auth-operator/config/rbac/: authuser_editor_role.yaml  authuser_viewer_role.yaml  role.yaml
services/auth-operator/config/samples/: auth_v1alpha1_authuser.yaml  kustomization.yaml
services/auth-operator/controllers/: authuser_controller.go  suite_test.go
services/auth-operator/crds/: test-user.yaml  user.crd.yaml
services/auth-operator/int-test/: Earthfile  Mudfile  package-lock.json  package.json
services/auth-operator/int-test/tests/: auth-mock.js  crds.js  test.spec.js
services/auth-operator/integration/: integration_test.go
services/auth-operator/internal/handlers/: handlers.go  handlers_test.go
services/auth-operator/internal/users/: clientset.go  copy.go  register.go  user.go
services/auth-operator/lib/auth-client/: Cargo.toml
services/auth-operator/lib/auth-client/src/: lib.rs
services/auth-operator/lib/auth-kube/: Cargo.toml
services/auth-operator/lib/auth-kube/src/: lib.rs
services/auth-operator/lib/auth-types/: Cargo.toml
services/auth-operator/lib/auth-types/src/: lib.rs
services/auth-operator/mock/: Earthfile  Mudfile  package-lock.json  package.json
services/auth-operator/mock/src/: server.js
services/auth-operator/operator/: .eslintrc  Earthfile  Mudfile  package-lock.json  package.json
services/auth-operator/operator/src/: client.js  index.js  listener.js
services/auth-operator/operator/src/auth-server/: client.js  index.js
services/auth-operator/operator/src/k8s/: api.js  index.js  listener.js
services/auth-operator/operator/src/user-manager/: index.js  manager.js  manager.spec.js  state.js
services/auth-operator/scratch/: kubeconfig
services/auth-operator/src/: Main.rs
services/auth-server/: .earthignore  Earthfile  Mudfile  Tiltfile  docker-compose.yaml  go.mod  go.sum  main.go  mudly.yaml
services/auth-server-mock/: Earthfile  go.mod  main.go  main_test.go
services/db-init/: .envrc.example  Earthfile  Mudfile  docker-compose.yaml  go.mod  go.sum  main.go
services/db-operator/: .dockerignore  Mudfile  Tiltfile  go.mod  go.sum  justfile  main.go  shared.Tiltfile
services/dockerfiles/: int-test.Dockerfile  rust-prod.Dockerfile  rust-static.Dockerfile  rust.Dockerfile  static.Dockerfile
services/draughts/: Tiltfile  go.mod  go.sum  justfile
services/event-broker/: .dockerignore  Mudfile  Tiltfile  go.mod  go.sum  justfile  main.go
services/event-gateway/: Mudfile  Tiltfile  go.mod  go.sum  justfile  main.go
services/event-recorder/: Tiltfile  go.mod  go.sum  justfile  (+2 more)
services/rust/auth-controller/: Cargo.toml  Dockerfile  keep-stack-sizes.x
services/rust/auth-controller/src/: main.rs
services/rust/auth-controller/src/auth/: api.rs
services/rust/auth-controller/src/resources/: client.rs  mod.rs  user_seed.rs
services/rust/auth-server/: Cargo.toml
services/rust/auth-server/libs/persistence/: Cargo.toml
services/rust/auth-server/libs/persistence/src/: lib.rs  migrations.rs
services/rust/auth-server/src/: clients.rs  database.rs  kafka.rs  main.rs  users.rs
services/rust/doorman/: Cargo.toml  Tiltfile
services/rust/doorman/int-test/: package-lock.json  package.json
services/rust/doorman/int-test/tests/: index.spec.js
services/rust/doorman/int-test/tests/mockServer/: index.js
services/rust/doorman/src/: api.rs  main.rs
services/rust/doorman/static/: index.html
services/rust/gatekeeper/: Cargo.toml  Tiltfile
services/rust/gatekeeper/int-test/: package-lock.json  package.json
services/rust/gatekeeper/int-test/tests/: index.spec.js
services/rust/gatekeeper/src/: logger.rs  main.rs
tools/: npm-login.sh
(+598 files in other folders)
