[package]
name = "auth-operator"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["full"] }
anyhow = "1.0.37"
log = "0.4.11"
env_logger = "0.8.2"
kube = "^0.55.0"
k8s-openapi = { version = "0.11.0", features = ["v1_20"], default-features = false }