[package]
name = "auth-controller"
version = "0.1.0"
authors = ["Ben Wright <benjamin.wright@nielsen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.43.0", features = ["derive"] }
kube-runtime = "0.43.0"
k8s-openapi = { version = "0.9.0", features = ["v1_18"] }
serde =  { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2.22", features = ["full"] }
reqwest = { version = "0.10.8", features = ["json", "gzip", "stream"] }
log = "0.4.11"
env_logger = "0.8.1"
futures = "0.3.5"
