[package]
name = "auth-server"
version = "0.1.0"
authors = ["Ben Wright <benjamin.wright@nielsen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.persistence]
path = "libs/persistence"

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0.116", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["postgres_pool", "json"]
