[package]
name = "auth-server"
version = "0.1.0"
authors = ["Ben Wright <benjamin.wright@nielsen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
anyhow = "1.0.34"
log = "0.4.11"
env_logger = "0.8.2"
tokio = { version = "0.2.6", features = ["sync", "macros"] }
serde = { version = "1.0.116", features = ["derive"] }
uuid = { version = "0.8", features = ["serde"] }
tokio-postgres = { version = "0.5.1", features = ["with-uuid-0_8"] }
deadpool-postgres = "0.5.0"
postgres-protocol = "0.5.0"
rdkafka = "0.24.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["postgres_pool", "json"]
