[package]
name = "doorman"
version = "0.1.0"
authors = ["Ben Wright <benjamin.wright@nielsen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
anyhow = "1.0.34"
log = "0.4.11"
env_logger = "0.8.2"
handlebars = { version="3.5.1", features=["dir_source"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"