[package]
name = "auth_client"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth_types = { path="../auth-types" }
anyhow = "1.0.37"
log = "0.4.11"
env_logger = "0.8.2"
reqwest = { version="0.11.3", features=["json"] }