[package]
name = "auth_kube"
version = "0.1.0"
authors = []
edition = "2018"

[features]
default = ["native-tls", "schema", "kubederive", "ws"]
kubederive = ["kube/derive"]
schema = ["kube-derive/schema"]
native-tls = ["kube/native-tls", "kube-runtime/native-tls"]
ws = ["kube/ws"]

[dependencies]
auth_types = { path="../auth-types" }
futures = "0.3.8"
tokio = { version = "1.0.1", features = ["full"] }
anyhow = "1.0.37"
log = "0.4.11"
env_logger = "0.8.2"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
schemars = "0.8.0"
kube = { version = "^0.55.0", default-features=false, features = ["admission"] }
kube-derive = { version = "^0.55.0", default-features = false } # only needed to opt out of schema
kube-runtime = { version = "^0.55.0", default-features = false }
kube-core = { version = "^0.55.0", default-features = false }
k8s-openapi = { version = "0.11.0", features = ["v1_20"], default-features = false }